--- a/src/index.css
+++ b/src/index.css
@@ -70,11 +70,17 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: clip;
+  overscroll-behavior: none;
+}
+
 html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
+  max-width: 100%;
   overflow: hidden;
   overscroll-behavior: none;
 }
